--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -132,30 +132,30 @@
 <%# sold out? %>
 <%# ----------------------- SoldOut 購入機能時に実装 ----------------------- %>
     <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-    <li class='list'>
-      <%= link_to "#" do %>
-      <div class='item-img-content'>
-        <%= image_tag "item-sample.png", class: "item-img" %>
+    <%# <li class='list'> %>
+      <%# <%= link_to "#" do %>
+      <%# <div class='item-img-content'> %>
+        <%# <%= image_tag "item-sample.png", class: "item-img" %>
         <%# 商品が売れていればsold outを表示しましょう %>
-        <div class='sold-out'>
-          <span>Sold Out!!</span>
-        </div>
+        <%# <div class='sold-out'> %>
+          <%# <span>Sold Out!!</span> %>
+        <%# </div> %>
         <%# //商品が売れていればsold outを表示しましょう %>
-      </div>
-      <div class='item-info'>
-        <h3 class='item-name'>
-          <%= "商品名" %>
-        </h3>
-        <div class='item-price'>
-          <span><%= "販売価格" %>円<br><%= '配送料負担' %></span>
-          <div class='star-btn'>
-            <%= image_tag "star.png", class:"star-icon" %>
-            <span class='star-count'>0</span>
-          </div>
-        </div>
-      </div>
-      <% end %>
-    </li>
+      <%# </div> %>
+      <%# <div class='item-info'> %>
+        <%# <h3 class='item-name'> %>
+          <%# <%= "商品名" %>
+        <%# </h3> %>
+        <%# <div class='item-price'> %>
+          <%# <span><%= "販売価格" 円<br><%= '配送料負担'</span> %> 
+          <%# <div class='star-btn'> %>
+            <%# <%= image_tag "star.png", class:"star-icon" %> 
+            <%# <span class='star-count'>0</span> %>
+          <%# </div> %>
+        <%# </div> %>
+      <%# </div> %>
+      <%# <% end %>
+    <%# </li> %>
 <%# ----------------------- SoldOut 購入機能時に実装 ----------------------- %>
 
 
@@ -164,7 +164,7 @@
       <% if @items.any? %>
         <% @items.each do |item| %>
         <li class='list'>
-          <%= link_to item_path(item.id) do %>
+          <%# <%= link_to item_path(item.id) do %> 
           <%= image_tag item.image, class: "item-img" %>
           <div class='item-info'>
             <h3 class='item-name'>
@@ -178,7 +178,7 @@
               </div>
             </div>
           </div>
-          <% end %>
+          <%# <% end %>
         </li>
         <% end %>
       
