--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -164,7 +164,7 @@
       <% if @items.any? %>
         <% @items.each do |item| %>
         <li class='list'>
-          <%# <%= link_to item_path(item.id) do %> 
+          <%= link_to item_path(item.id) do %> 
           <%= image_tag item.image, class: "item-img" %>
           <div class='item-info'>
             <h3 class='item-name'>
@@ -178,7 +178,7 @@
               </div>
             </div>
           </div>
-          <%# <% end %>
+          <% end %>
         </li>
         <% end %>
       
