--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,60 +126,36 @@
     <div class="subtitle" >
       新規投稿商品
     </div>
+
+    <%# items list  %>
     <ul class='item-lists'>
 
-
-<%# sold out? %>
-<%# ----------------------- SoldOut 購入機能時に実装 ----------------------- %>
-    <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-    <%# <li class='list'> %>
-      <%# <%= link_to "#" do %>
-      <%# <div class='item-img-content'> %>
-        <%# <%= image_tag "item-sample.png", class: "item-img" %>
-        <%# 商品が売れていればsold outを表示しましょう %>
-        <%# <div class='sold-out'> %>
-          <%# <span>Sold Out!!</span> %>
-        <%# </div> %>
-        <%# //商品が売れていればsold outを表示しましょう %>
-      <%# </div> %>
-      <%# <div class='item-info'> %>
-        <%# <h3 class='item-name'> %>
-          <%# <%= "商品名" %>
-        <%# </h3> %>
-        <%# <div class='item-price'> %>
-          <%# <span><%= "販売価格" 円<br><%= '配送料負担'</span> %> 
-          <%# <div class='star-btn'> %>
-            <%# <%= image_tag "star.png", class:"star-icon" %> 
-            <%# <span class='star-count'>0</span> %>
-          <%# </div> %>
-        <%# </div> %>
-      <%# </div> %>
-      <%# <% end %>
-    <%# </li> %>
-<%# ----------------------- SoldOut 購入機能時に実装 ----------------------- %>
-
-
-
-<%# items list  %>
       <% if @items.any? %>
         <% @items.each do |item| %>
-        <li class='list'>
-          <%= link_to item_path(item.id) do %> 
-          <%= image_tag item.image, class: "item-img" %>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.name %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.price %>円<br><%= ShippingCostBurden.find(item.shipping_cost_burden_id).name %></span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
+          <li class='list'>
+            <%= link_to item_path(item.id) do %> 
+              <div class='item-img-content'>
+                <%= image_tag item.image, class: "item-img" %>
+                <% if item.purchase_record.present?%>
+                  <div class='sold-out'>
+                    <span>Sold Out!!</span>
+                  </div> 
+                <% end %>
               </div>
-            </div>
-          </div>
-          <% end %>
-        </li>
+              <div class='item-info'>
+                <h3 class='item-name'>
+                  <%= item.name %>
+                </h3>
+                <div class='item-price'>
+                  <span><%= item.price %>円<br><%= ShippingCostBurden.find(item.shipping_cost_burden_id).name %></span>
+                  <div class='star-btn'>
+                    <%= image_tag "star.png", class:"star-icon" %>
+                    <span class='star-count'>0</span>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          </li>
         <% end %>
       
       <% else %>
