--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
   <%= csp_meta_tag %>
   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
   <%= javascript_importmap_tags %>
+  <script type="text/javascript" src="https://js.pay.jp/v2/pay.js"></script>
 </head>
 
 <body>
   <%= yield %>
+
 </body>
 
 </html>
